refactor: added ControlValueAccessor +style files optimized

--- a/frontend/src/app-theme.scss
+++ b/frontend/src/app-theme.scss
@@ -37,3 +37,4 @@ $app-typography: mat-typography-config(
 @import "./app/libs/common-components/components/radio-group/radio-group.theme.scss";
 @import "./app/libs/common-components/components/slide-toggle/slide-toggle.theme.scss";
 @import "./app/libs/common-components/components/popover/popover.theme.scss";
+@import "./app/libs/common-components/components/input/input.theme.scss";
