--- a/frontend/src/app/libs/common-components/shared/md-palette.scss
+++ b/frontend/src/app/libs/common-components/shared/md-palette.scss
@@ -12,27 +12,8 @@ $mat-light-theme-background: (
   selected-button: map_get($mat-grey, 300),
   selected-disabled-button: map_get($mat-grey, 400),
   disabled-button-toggle: map_get($mat-grey, 200),
-  unselected-chip: map_get($mat-grey, 300),
+  unselected-chip: $color-black-10,
   disabled-list-option: map_get($mat-grey, 200),
-  tooltip: map_get($mat-grey, 700),
-);
-
-// Background palette for dark themes.
-$mat-dark-theme-background: (
-  status-bar: black,
-  app-bar:    map_get($mat-grey, 900),
-  background: #303030,
-  hover:      rgba(white, .04),
-  card:       map_get($mat-grey, 800),
-  dialog:     map_get($mat-grey, 800),
-  disabled-button: rgba(white, .12),
-  raised-button: map-get($mat-grey, 800),
-  focused-button: $light-focused,
-  selected-button: map_get($mat-grey, 900),
-  selected-disabled-button: map_get($mat-grey, 800),
-  disabled-button-toggle: black,
-  unselected-chip: map_get($mat-grey, 700),
-  disabled-list-option: black,
   tooltip: map_get($mat-grey, 700),
 );
 
@@ -49,10 +30,29 @@ $mat-light-theme-foreground: (
   secondary-text:    $dark-secondary-text,
   icon:              rgba(black, .54),
   icons:             rgba(black, .54),
-  text:              $color-black-medium-emphasis,
+  text:              $color-black-100,
   slider-min:        rgba(black, .87),
   slider-off:        rgba(black, .26),
   slider-off-active: rgba(black, .38),
+);
+
+// Background palette for dark themes.
+$mat-dark-theme-background: (
+  status-bar: black,
+  app-bar:    map_get($mat-grey, 900),
+  background: #303030,
+  hover:      rgba(white, .04),
+  card:       map_get($mat-grey, 800),
+  dialog:     map_get($mat-grey, 800),
+  disabled-button: rgba(white, .12),
+  raised-button: map-get($mat-grey, 800),
+  focused-button: $light-focused,
+  selected-button: map_get($mat-grey, 900),
+  selected-disabled-button: map_get($mat-grey, 800),
+  disabled-button-toggle: black,
+  unselected-chip: $color-white-100,
+  disabled-list-option: black,
+  tooltip: map_get($mat-grey, 700),
 );
 
 // Foreground palette for dark themes.
@@ -68,7 +68,7 @@ $mat-dark-theme-foreground: (
   secondary-text:    $light-secondary-text,
   icon:              white,
   icons:             white,
-  text:              $color-white-75,
+  text:              $color-white-100,
   slider-min:        white,
   slider-off:        rgba(white, .3),
   slider-off-active: rgba(white, .3),
