--- a/frontend/src/app/libs/common-components-demo/components/input-demo/input-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/components/input-demo/input-demo.component.html
@@ -1,46 +1,63 @@
 <app-demo-group class="input-demo" [title]="'Input'">
 	
     <div class="light-theme input-demo__states">
-		<form class="input-demo__row" [formGroup]="inputDemoForm">
-			<app-demo-state [title]="'Text'" [isDark]="false">
-				<app-input [inputType]="'text'" [label]="'Your text'" [placeholder]="'Your placeholder'" formControlName="title"></app-input>
-				<app-input [inputType]="'text'" [label]="'Your text'" [placeholder]="'Your placeholder'" formControlName="title1"></app-input>
-				<app-input [inputType]="'text'" [label]="'Your text'" [placeholder]="'Your placeholder'" formControlName="title2"></app-input>
-			</app-demo-state>
+		<div class="input-demo__row">
+			<form [formGroup]="inputTextDemoForm">
+				<app-demo-state [title]="'Text'" [isDark]="false">
+					<app-input [formControl]="inputTextDemoForm.controls['text1']" [inputType]="'text'" [label]="'Your text without validate'" [placeholder]="'Your placeholder'" formControlName="text1"></app-input>
+					<app-input [formControl]="inputTextDemoForm.controls['text2']" [inputType]="'text'" [label]="'Your text with validate'" [placeholder]="'Your placeholder'" formControlName="text2"></app-input>
+					<app-input [formControl]="inputTextDemoForm.controls['text3']" [inputType]="'text'" [label]="'Your text'" [placeholder]="'Your placeholder'" formControlName="text3"></app-input>
+					<app-button type="flat" (click)="submit()" [disabled]="inputTextDemoForm.status==='INVALID'">Click</app-button>
+				</app-demo-state>
+			</form>
 
-			<!-- <app-demo-state [title]="'Email'" [isDark]="false">
-				<app-input [inputType]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'"></app-input>
-				<app-input [inputType]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" ></app-input>
-				<app-input [inputType]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" ></app-input>
-			</app-demo-state>
+			<form class="input-demo__row" [formGroup]="inputEmailDemoForm">
+				<app-demo-state [title]="'Email'" [isDark]="false">
+					<app-input [formControl]="inputEmailDemoForm.controls['email1']" [inputType]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email1"></app-input>
+					<app-input [formControl]="inputEmailDemoForm.controls['email2']" [inputType]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email2"></app-input>
+					<app-input [formControl]="inputEmailDemoForm.controls['email3']" [inputType]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email3"></app-input>
+					<app-button type="flat" (click)="submit()" [disabled]="inputEmailDemoForm.status==='INVALID'">Click</app-button>
+				</app-demo-state>
+			</form>
 
-			<app-demo-state [title]="'Password'" [isDark]="false">
-				<app-input [inputType]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" ></app-input>
-				<app-input [inputType]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" ></app-input>
-				<app-input [inputType]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" [hide]="false"></app-input>
-			</app-demo-state> -->
-		</form>
-
+			<form class="input-demo__row" [formGroup]="inputPasswordDemoForm">
+				<app-demo-state [title]="'Password'" [isDark]="false">
+					<app-input [formControl]="inputPasswordDemoForm.controls['password1']" [inputType]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" formControlName="password1"></app-input>
+					<app-input [formControl]="inputPasswordDemoForm.controls['password2']" [inputType]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" formControlName="password2"></app-input>
+					<app-input [formControl]="inputPasswordDemoForm.controls['password3']" [inputType]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" [hide]="false" formControlName="password3"></app-input>
+					<app-button type="flat" (click)="submit()" [disabled]="inputPasswordDemoForm.status==='INVALID'">Click</app-button>
+				</app-demo-state>
+			</form>
+		</div>
 	</div>
 	<div class="dark-theme input-demo__states">
 		<div class="input-demo__row">
-			<!-- <app-demo-state [title]="'Text'" [isDark]="true">
-				<app-input [inputType]="'text'" [theme]="darkTheme" [label]="'Your text'" [placeholder]="'Your placeholder'"></app-input>
-				<app-input [inputType]="'text'" [theme]="darkTheme" [label]="'Your text'" [placeholder]="'Your placeholder'" ></app-input>
-				<app-input [inputType]="'text'" [theme]="darkTheme" [label]="'Your text'" [placeholder]="'Your placeholder'" ></app-input>
-			</app-demo-state>
+			<form [formGroup]="inputTextDemoForm">
+				<app-demo-state [title]="'Text'" [isDark]="false">
+					<app-input [formControl]="inputTextDemoForm.controls['text1']" [theme]="darkTheme" [inputType]="'text'" [label]="'Your text'" [placeholder]="'Your placeholder'" formControlName="text1"></app-input>
+					<app-input [formControl]="inputTextDemoForm.controls['text2']" [theme]="darkTheme" [inputType]="'text'" [label]="'Your text'" [placeholder]="'Your placeholder'" formControlName="text2"></app-input>
+					<app-input [formControl]="inputTextDemoForm.controls['text3']" [theme]="darkTheme" [inputType]="'text'" [label]="'Your text'" [placeholder]="'Your placeholder'" formControlName="text3"></app-input>
+					<app-button type="flat" [theme]="darkTheme" (click)="submit()" [disabled]="inputTextDemoForm.status==='INVALID'">Click</app-button>
+				</app-demo-state>
+			</form>
 
-			<app-demo-state [title]="'Email'" [isDark]="true">
-				<app-input [inputType]="'email'" [theme]="darkTheme" [label]="'Your email'" [placeholder]="'Your placeholder'"></app-input>
-				<app-input [inputType]="'email'" [theme]="darkTheme" [label]="'Your email'" [placeholder]="'Your placeholder'" ></app-input>
-				<app-input [inputType]="'email'" [theme]="darkTheme" [label]="'Your email'" [placeholder]="'Your placeholder'" ></app-input>
-			</app-demo-state>
+			<form class="input-demo__row" [formGroup]="inputEmailDemoForm">
+				<app-demo-state [title]="'Email'" [isDark]="false">
+					<app-input [formControl]="inputEmailDemoForm.controls['email1']" [theme]="darkTheme" [inputType]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email1"></app-input>
+					<app-input [formControl]="inputEmailDemoForm.controls['email2']" [theme]="darkTheme" [inputType]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email2"></app-input>
+					<app-input [formControl]="inputEmailDemoForm.controls['email3']" [theme]="darkTheme" [inputType]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email3"></app-input>
+					<app-button type="flat" [theme]="darkTheme" (click)="submit()" [disabled]="inputEmailDemoForm.status==='INVALID'">Click</app-button>
+				</app-demo-state>
+			</form>
 
-			<app-demo-state [title]="'Password'" [isDark]="true">
-				<app-input [inputType]="'password'" [theme]="darkTheme" [label]="'Your password'" [placeholder]="'Your placeholder'" ></app-input>
-				<app-input [inputType]="'password'" [theme]="darkTheme" [label]="'Your password'" [placeholder]="'Your placeholder'" ></app-input>
-				<app-input [inputType]="'password'" [theme]="darkTheme" [label]="'Your password'" [placeholder]="'Your placeholder'" [hide]="false"></app-input>
-			</app-demo-state> -->
+			<form class="input-demo__row" [formGroup]="inputPasswordDemoForm">
+				<app-demo-state [title]="'Password'" [isDark]="false">
+					<app-input [formControl]="inputPasswordDemoForm.controls['password1']" [theme]="darkTheme" [inputType]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" formControlName="password1"></app-input>
+					<app-input [formControl]="inputPasswordDemoForm.controls['password2']" [theme]="darkTheme" [inputType]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" formControlName="password2"></app-input>
+					<app-input [formControl]="inputPasswordDemoForm.controls['password3']" [theme]="darkTheme" [inputType]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" [hide]="false" formControlName="password3"></app-input>
+					<app-button type="flat" [theme]="darkTheme" (click)="submit()" [disabled]="inputPasswordDemoForm.status==='INVALID'">Click</app-button>
+				</app-demo-state>
+			</form>
 		</div>
 
 	</div>
