--- a/frontend/src/app/libs/common-components/components/input/input.component.html
+++ b/frontend/src/app/libs/common-components/components/input/input.component.html
@@ -1,3 +1,4 @@
+<div [formGroup]="inputFormGroup">
 <mat-form-field 
 	appearance="outline" 
 	class="input"
@@ -6,29 +7,29 @@
 	<mat-label>{{label}}</mat-label>
 	<input
 		matInput 
-		class="ng-touched"
 		(input)="writeValue($event.target.value)"
 		[type]="type"
-		[value]="value"
-		[formControlName]="formControl"
+		value="value"
+		formControlName="formControl"
 		(blur)="onTouched()"
 		placeholder={{placeholder}}>
-	<mat-error *ngIf="isText && formControl.hasError('required')">
+	<mat-error *ngIf="isText && inputFormGroup.controls['formControl'].hasError('required')">
 		Please enter a {{inputType}} 
 	</mat-error>
 
-	<mat-error *ngIf=" isEmail && formControl.hasError('required')">
+	<mat-error *ngIf=" isEmail && inputFormGroup.controls['formControl'].hasError('required')">
 		Please enter a {{inputType}} 
 	</mat-error>
-	<mat-error *ngIf="isEmail && formControl.hasError('email') && !formControl.hasError('required')">
+	<mat-error *ngIf="isEmail && !inputFormGroup.controls['formControl'].hasError('required') && inputFormGroup.controls['formControl'].hasError('email')">
 		Please enter a valid email address 
 	</mat-error>
 
-	<mat-error *ngIf="isPassword && formControl.hasError('required')">
+	<mat-error *ngIf="isPassword && inputFormGroup.controls['formControl'].hasError('required')">
 		Please enter a {{inputType}} 
 	</mat-error>
-	<mat-error *ngIf="isPassword && !formControl.hasError('required') && formControl.hasError('pattern')">
-		Password should contain at least 6 characters
+	
+	<mat-error *ngIf="isPassword && !inputFormGroup.controls['formControl'].hasError('required') && inputFormGroup.controls['formControl'].hasError('pattern')">
+		Please enter at least 6 characters
 	</mat-error>
 
 	<button 
@@ -40,4 +41,4 @@
 		<mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
 	</button>
 </mat-form-field>
-  
+</div>
