--- a/frontend/src/app/libs/common-components-demo/components/tag-demo/tag-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/components/tag-demo/tag-demo.component.html
@@ -1,33 +1,28 @@
 <app-demo-group class="tag-demo" [title]="'Tags'">
 	<div class="light-theme">
 		<app-demo-state [title]="'default'">
-			<app-tag-list [tags]="tags"></app-tag-list>
+			<app-tag-list [tags]="tags" [selectable]="true"
+					(onClick)="onClick($event)">
+			</app-tag-list>
 		</app-demo-state>
-		<app-demo-state [title]="'selectable'">
-			<app-tag-list [tags]="tagsSelectable" [selectable]="true"></app-tag-list>
-		</app-demo-state>
-		<app-demo-state [title]="'removable-selectable'">
-			<app-tag-list 
-					[tags]="tagsSelectable" 
-					[removable]="true" 
-					[selectable]="true" 
-					(onRemove)="onRemove($event)"></app-tag-list>
+		<app-demo-state [title]="'removable'">
+			<app-tag-list [tags]="tagsRemovable" [selectable]="true" [removable]="true"
+					(onClick)="onClick($event)"
+					(onRemove)="onRemove($event)">
+			</app-tag-list>
 		</app-demo-state>
 	</div>
 	<div class="dark-theme">
 		<app-demo-state [title]="'default'" [isDark]="true">
-			<app-tag-list [tags]="tags" [theme]="darkTheme"></app-tag-list>
+			<app-tag-list [tags]="tagsDark" [selectable]="true" [theme]="darkTheme"
+					(onClick)="onClick($event)">
+			</app-tag-list>
 		</app-demo-state>
-		<app-demo-state [title]="'selectable'" [isDark]="true">
-			<app-tag-list [tags]="tagsSelectable" [selectable]="true" [theme]="darkTheme"></app-tag-list>
-		</app-demo-state>
-		<app-demo-state [title]="'removable-selectable'" [isDark]="true">
-			<app-tag-list 
-					[tags]="tagsSelectable" 
-					[removable]="true" 
-					[selectable]="true" 
-					(onRemove)="onRemove($event)" 
-					[theme]="darkTheme"></app-tag-list>
+		<app-demo-state [title]="'removable'" [isDark]="true">
+			<app-tag-list [tags]="tagsRemovableDark" [selectable]="true" [removable]="true" [theme]="darkTheme"
+					(onClick)="onClick($event)"
+					(onRemove)="onRemove($event)"
+					></app-tag-list>
 		</app-demo-state>
 	</div>
 </app-demo-group>
