fix(gandalf/frontend): comments fixed

--- a/frontend/src/app/libs/admin-role-management/components/user-role-tile/user-role-tile.component.scss
+++ b/frontend/src/app/libs/admin-role-management/components/user-role-tile/user-role-tile.component.scss
@@ -1,6 +1,6 @@
 @import "variables";
 
-.app-user-role-tile {
+.user-role-tile {
 	&__container {
 		border: 1px solid $color-black-50;
 		display: flex;
