--- a/frontend/src/app/libs/admin-role-management/components/users-role-management-panel/users-role-management-panel.component.html
+++ b/frontend/src/app/libs/admin-role-management/components/users-role-management-panel/users-role-management-panel.component.html
@@ -1,23 +1,28 @@
-<div class="app-users-role-management-panel">
-  <div class="app-users-role-management-panel__header">
-    <h1>Users</h1>
+<div class="users-role-management-panel">
+  <div class="users-role-management-panel__header">
+    <h3>Users</h3>
   </div>
-  <div class="app-users-role-management-panel__input">
-    <div class="app-users-role-management-panel__input-header">
-      <h1>Search</h1>
+  <div class="users-role-management-panel__input">
+    <div class="users-role-management-panel__input-header">
+      <h3>Search</h3>
     </div>
     <mat-form-field>
-      <input matInput type="text" [(ngModel)]="searchText" autocomplete="off">
+      <input matInput
+             type="text"
+             [(ngModel)]="searchText"
+             autocomplete="off">
     </mat-form-field>
   </div>
   <ng-container *ngFor="let item of filteredUsers">
-    <app-user-role-tile (isEventManager)="changeUserState($event, item)" [userUpdateIsDisabled]="userUpdateState"
-      [user]="item" class="app-users-role-management-panel__user">
+    <app-user-role-tile (isEventManager)="changeUserState($event, item)"
+                        [userUpdateIsDisabled]="userUpdateState"
+                        [user]="item"
+                        class="users-role-management-panel__user">
     </app-user-role-tile>
   </ng-container>
   <ng-container *ngIf="userNotFound">
-    <div class="app-users-role-management-panel__notfound">
-      <h1>Not Found</h1>
+    <div class="users-role-management-panel__empty">
+      <h3>Not Found</h3>
     </div>
   </ng-container>
 </div>
