fix(gandalf/frontend): radio-group tests fixed

--- a/frontend/src/app/libs/admin-role-management/components/user-role-tile/user-role-tile.component.html
+++ b/frontend/src/app/libs/admin-role-management/components/user-role-tile/user-role-tile.component.html
@@ -7,7 +7,7 @@
       <div class="user-role-tile__name">
         <span>{{user.firstName}} </span>
         <span>{{user.secondName}}</span>
-        <div class="app-user-role-tile__email">
+        <div class="user-role-tile__email">
           <span>{{user.email}}</span>
         </div>
       </div>
