feat: add event-card

--- a/frontend/src/app/libs/common-components/components/event-card/components/event-card-date/event-card-date.component.html
+++ b/frontend/src/app/libs/common-components/components/event-card/components/event-card-date/event-card-date.component.html
@@ -1,4 +1,4 @@
-<time class="app-event-date">
+<time class="event-card-date">
 	<span>{{ startDate | date: dateFormat }}</span>
 	<ng-container *ngIf="startDate && endDate">
 		<span> - </span>
