--- a/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
@@ -1,8 +1,8 @@
 <div class="common-components-demo">
+	<app-event-card-demo></app-event-card-demo>
 	<app-tag-demo></app-tag-demo>
 	<app-tabs-demo></app-tabs-demo>
 	<app-typography-demo></app-typography-demo>
-	<app-event-tile-demo></app-event-tile-demo>
 	<app-slide-toggle-demo></app-slide-toggle-demo>
 	<app-button-demo></app-button-demo>
 	<app-popover-demo></app-popover-demo>
