--- a/frontend/src/app/libs/common-components-demo/demo-state/demo-state.component.html
+++ b/frontend/src/app/libs/common-components-demo/demo-state/demo-state.component.html
@@ -1,5 +1,4 @@
-<div class="demo-state">
+<div class="demo-state" [class.demo-state--dark-theme]="isDark">
 	<div class="demo-state__title" [class.demo-state__title--dark-theme]="isDark">{{ title }}</div>
 	<ng-content></ng-content>
 </div>
-
