--- a/frontend/src/app/libs/common-components-demo/demo-state/demo-state.component.scss
+++ b/frontend/src/app/libs/common-components-demo/demo-state/demo-state.component.scss
@@ -1,5 +1,8 @@
+@import "variables";
+
 .demo-state {
-  padding: 10px;
+	padding: 10px;
+	background: $color-white-100;
 
   &__title {
 		margin-bottom: 5px;
@@ -7,5 +10,9 @@
     &--dark-theme {
       color: rgba(255, 255, 255, 0.5);
     }
-  }
+	}
+	
+	&--dark-theme {
+		background: $color-black-100;
+	}
 }
