--- a/frontend/src/app/libs/common-components/components/event-card/event-card.component.scss
+++ b/frontend/src/app/libs/common-components/components/event-card/event-card.component.scss
@@ -47,7 +47,7 @@ $container-padding-left-right: 40px;
     margin-left: 8px;
   }
 
-  &__roles {
+  &__tag-list {
     position: absolute;
     bottom: $container-padding-top-bottom;
     left: $container-padding-left-right;
