refactor: simplify interface of event-card

--- a/frontend/src/app/libs/common-components-demo/components/event-card-demo/event-card-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/components/event-card-demo/event-card-demo.component.html
@@ -38,6 +38,7 @@
 						[endDate]="eventCardData[0].endDate"
 						[participants]="69"
 						[roles]="eventCardData[0].roles"
+						[color]="colors[3]"
 						[roundedCorner]="roundedCorners[3]">
 				</app-event-card>	
 			</app-demo-state>
@@ -109,6 +110,7 @@
 						[endDate]="eventCardData[0].endDate"
 						[participants]="69"
 						[roles]="eventCardData[0].roles"
+						[color]="colors[3]"
 						[roundedCorner]="roundedCorners[3]">
 				</app-event-card>	
 			</app-demo-state>
