--- a/frontend/src/app/libs/common-components-demo/components/input-demo/input-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/components/input-demo/input-demo.component.html
@@ -4,41 +4,59 @@
 		<div class="input-demo__row">
 			<form [formGroup]="inputTextDemoForm">
 				<app-demo-state [title]="'Text'" [isDark]="false">
-					<app-input
-						[inputValidators]="inputSyncValidators"
-						[inputType]="'text'"
-						[label]="'With input validate > 6 char'"
-						[placeholder]="'Your placeholder'"
-						formControlName="text1">
-					</app-input>
-					<app-input
-						[formControl]="inputTextDemoForm.controls['text2']"
-						[inputValidatorsAsync]="inputAsyncValidators"
-						[inputType]="'text'"
-						[value]="'from input value'"
-						[label]="'Your text with validate'"
-						[placeholder]="'Your placeholder'"
-						formControlName="text2">
-					</app-input>
-					<app-input [formControl]="inputTextDemoForm.controls['text3']" [disabled]="true" [inputType]="'text'" [label]="'Your text'" [placeholder]="'Your placeholder'" formControlName="text3"></app-input>
+					<div class="wrapper">
+						<app-input
+							[inputValidators]="inputSyncValidators"
+							[type]="'text'"
+							[label]="'With input validate > 6 char'"
+							[placeholder]="'Your placeholder'"
+							formControlName="text1">
+						</app-input>
+					</div>
+					<div class="wrapper">
+						<app-input
+							[inputValidatorsAsync]="inputAsyncValidators"
+							[type]="'text'"
+							[value]="'from input value'"
+							[label]="'Your text with validate'"
+							[placeholder]="'Your placeholder'"
+							formControlName="text2">
+						</app-input>
+					</div>
+					<div class="wrapper">
+						<app-input [disabled]="true" [type]="'text'" [label]="'Your text'" [placeholder]="'Your placeholder'" formControlName="text3"></app-input>
+					</div>
 					<app-button type="flat" (click)="submit()" [disabled]="inputTextDemoForm.status==='INVALID'">Click</app-button>
 				</app-demo-state>
 			</form>
 
 			<form class="input-demo__row" [formGroup]="inputEmailDemoForm">
 				<app-demo-state [title]="'Email'" [isDark]="false">
-					<app-input [formControl]="inputEmailDemoForm.controls['email1']" [inputType]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email1"></app-input>
-					<app-input [formControl]="inputEmailDemoForm.controls['email2']" [value]="'email'" [inputType]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email2"></app-input>
-					<app-input [formControl]="inputEmailDemoForm.controls['email3']" [inputType]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email3"></app-input>
+					<div class="wrapper">
+						<app-input [type]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email1"></app-input>
+					</div>
+
+					<div class="wrapper">
+						<app-input [value]="'email'" [type]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email2"></app-input>
+					</div>
+					<div class="wrapper">
+						<app-input [type]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email3"></app-input>
+					</div>
 					<app-button type="flat" (click)="submit()" [disabled]="inputEmailDemoForm.status==='INVALID'">Click</app-button>
 				</app-demo-state>
 			</form>
 
 			<form class="input-demo__row" [formGroup]="inputPasswordDemoForm">
 				<app-demo-state [title]="'Password'" [isDark]="false">
-					<app-input [formControl]="inputPasswordDemoForm.controls['password1']" [inputType]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" formControlName="password1"></app-input>
-					<app-input [formControl]="inputPasswordDemoForm.controls['password2']" [inputType]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" formControlName="password2"></app-input>
-					<app-input [formControl]="inputPasswordDemoForm.controls['password3']" [inputType]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" [hide]="false" formControlName="password3"></app-input>
+					<div class="wrapper">
+						<app-input [type]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" formControlName="password1"></app-input>
+					</div>
+					<div class="wrapper">
+						<app-input [type]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" formControlName="password2"></app-input>
+					</div>
+					<div class="wrapper">
+						<app-input [type]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" [hide]="false" formControlName="password3"></app-input>
+					</div>
 					<app-button type="flat" (click)="submit()" [disabled]="inputPasswordDemoForm.status==='INVALID'">Click</app-button>
 				</app-demo-state>
 			</form>
@@ -47,28 +65,46 @@
 	<div class="dark-theme input-demo__states">
 		<div class="input-demo__row">
 			<form [formGroup]="inputTextDemoForm">
-				<app-demo-state [title]="'Text'" [isDark]="false">
-					<app-input [formControl]="inputTextDemoForm.controls['text1']" [theme]="darkTheme" [inputType]="'text'" [label]="'Your text'" [placeholder]="'Your placeholder'" formControlName="text1"></app-input>
-					<app-input [formControl]="inputTextDemoForm.controls['text2']" [theme]="darkTheme" [inputType]="'text'" [label]="'Your text'" [placeholder]="'Your placeholder'" formControlName="text2"></app-input>
-					<app-input [formControl]="inputTextDemoForm.controls['text3']" [theme]="darkTheme" [inputType]="'text'" [label]="'Your text'" [placeholder]="'Your placeholder'" formControlName="text3"></app-input>
+				<app-demo-state [title]="'Text'" [isDark]="true">
+					<div class="wrapper">
+						<app-input [formControl]="inputTextDemoForm.controls['text1']" [theme]="darkTheme" [type]="'text'" [label]="'Your text'" [placeholder]="'Your placeholder'" formControlName="text1"></app-input>
+					</div>
+					<div class="wrapper">
+						<app-input [formControl]="inputTextDemoForm.controls['text2']" [theme]="darkTheme" [type]="'text'" [label]="'Your text'" [placeholder]="'Your placeholder'" formControlName="text2"></app-input>
+					</div>
+					<div class="wrapper">
+						<app-input [formControl]="inputTextDemoForm.controls['text3']" [theme]="darkTheme" [type]="'text'" [label]="'Your text'" [placeholder]="'Your placeholder'" formControlName="text3"></app-input>
+					</div>
 					<app-button type="flat" [theme]="darkTheme" (click)="submit()" [disabled]="inputTextDemoForm.status==='INVALID'">Click</app-button>
 				</app-demo-state>
 			</form>
 
 			<form class="input-demo__row" [formGroup]="inputEmailDemoForm">
-				<app-demo-state [title]="'Email'" [isDark]="false">
-					<app-input [formControl]="inputEmailDemoForm.controls['email1']" [theme]="darkTheme" [inputType]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email1"></app-input>
-					<app-input [formControl]="inputEmailDemoForm.controls['email2']" [theme]="darkTheme" [inputType]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email2"></app-input>
-					<app-input [formControl]="inputEmailDemoForm.controls['email3']" [theme]="darkTheme" [inputType]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email3"></app-input>
+				<app-demo-state [title]="'Email'" [isDark]="true">
+					<div class="wrapper">
+						<app-input [formControl]="inputEmailDemoForm.controls['email1']" [theme]="darkTheme" [type]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email1"></app-input>
+					</div>	
+					<div class="wrapper">
+						<app-input [formControl]="inputEmailDemoForm.controls['email2']" [theme]="darkTheme" [type]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email2"></app-input>
+					</div>	
+					<div class="wrapper">
+						<app-input [formControl]="inputEmailDemoForm.controls['email3']" [theme]="darkTheme" [type]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email3"></app-input>
+					</div>
 					<app-button type="flat" [theme]="darkTheme" (click)="submit()" [disabled]="inputEmailDemoForm.status==='INVALID'">Click</app-button>
 				</app-demo-state>
 			</form>
 
 			<form class="input-demo__row" [formGroup]="inputPasswordDemoForm">
-				<app-demo-state [title]="'Password'" [isDark]="false">
-					<app-input [formControl]="inputPasswordDemoForm.controls['password1']" [theme]="darkTheme" [inputType]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" formControlName="password1"></app-input>
-					<app-input [formControl]="inputPasswordDemoForm.controls['password2']" [theme]="darkTheme" [inputType]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" formControlName="password2"></app-input>
-					<app-input [formControl]="inputPasswordDemoForm.controls['password3']" [theme]="darkTheme" [inputType]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" [hide]="false" formControlName="password3"></app-input>
+				<app-demo-state [title]="'Password'" [isDark]="true">
+					<div class="wrapper">
+						<app-input [formControl]="inputPasswordDemoForm.controls['password1']" [theme]="darkTheme" [type]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" formControlName="password1"></app-input>
+					</div>
+					<div class="wrapper">
+						<app-input [formControl]="inputPasswordDemoForm.controls['password2']" [theme]="darkTheme" [type]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" formControlName="password2"></app-input>
+					</div>
+					<div class="wrapper">
+						<app-input [formControl]="inputPasswordDemoForm.controls['password3']" [theme]="darkTheme" [type]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" [hide]="false" formControlName="password3"></app-input>
+					</div>
 					<app-button type="flat" [theme]="darkTheme" (click)="submit()" [disabled]="inputPasswordDemoForm.status==='INVALID'">Click</app-button>
 				</app-demo-state>
 			</form>
