--- a/frontend/src/app/libs/container/container.component.html
+++ b/frontend/src/app/libs/container/container.component.html
@@ -1,1 +1,5 @@
-<p>container works!</p>
+<app-header></app-header>
+<div class="container">
+	<router-outlet></router-outlet>
+</div>
+<app-footer></app-footer>
