feat: checkbox common component

--- a/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
@@ -5,4 +5,5 @@
 	<app-popover-demo></app-popover-demo>
 	<app-scrollbar-demo></app-scrollbar-demo>
 	<app-radio-group-demo></app-radio-group-demo>
+	<app-checkbox-demo></app-checkbox-demo>
 </div>
